@@ -11,6 +11,7 @@ CHANGELOG Roundcube Webmail
 - Fix errors when adding/updating contacts in active search (#1490015)
 - Fix incorrect thumbnail rotation with GD and exif orientation data (#1490029)
 - Fix contacts list update after adding/deleting/moving a contact (#1490028, #1490033)
+- Fix handling of email addresses with quoted domain part (#1490040)
 
 RELEASE 1.0.2
 -------------
